--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -95,13 +95,26 @@
           "target": [
             "TargetHome"
           ]
-        }
+        },
+        {
+          "name": "detail",
+          "pattern": "detail/{SupplierID}",
+          "target": [
+              "TargetHome",
+              "detail"
+          ]
+      }
       ],
       "targets": {
         "TargetHome": {
           "id": "Home",
           "name": "Home"
-        }
+        },
+        "detail": {
+                    "viewId": "detail",
+                    "viewName": "Detail",
+                    "viewLevel": 2
+                }
       }
     },
     "rootView": {
